@@ -1,3 +1,13 @@
+## vmoptions config
+
+```
+-Xms1024m
+-Xmx2048m
+-XX:MaxPermSize=756m
+-XX:ReservedCodeCacheSize=1024m
+-XX:+UseCompressedOops
+```
+
 ## IntelliJ: Set the JVM version
 
 `file > project structure > platform settings > sdks > 1.8`
